--- a/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
+++ b/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
@@ -44,12 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BNFExpression.cs" />
-    <Compile Include="BNFPattern.cs" />
+    <Compile Include="EarleyItem.cs" />
+    <Compile Include="Production.cs" />
     <Compile Include="BNFRuleset.cs" />
     <Compile Include="BNFToken.cs" />
     <Compile Include="MatchInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
