--- a/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
+++ b/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
@@ -85,5 +85,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="config\cities.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
