--- a/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
+++ b/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
@@ -70,10 +70,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BNFExpression.cs" />
+    <Compile Include="BnfExpression.cs" />
     <Compile Include="Production.cs" />
     <Compile Include="BNFRuleset.cs" />
-    <Compile Include="BNFToken.cs" />
+    <Compile Include="BnfToken.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
@@ -82,6 +82,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="config\config.bnf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="config\UrlConfig.bnf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
