Gotovo, ne mogu vise.

--- a/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
+++ b/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
@@ -72,7 +72,7 @@
   <ItemGroup>
     <Compile Include="BnfExpression.cs" />
     <Compile Include="Production.cs" />
-    <Compile Include="BNFRuleset.cs" />
+    <Compile Include="BnfRuleset.cs" />
     <Compile Include="BnfToken.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
