neke izmjene, ne znam vise ni sam sta.

--- a/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
+++ b/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BnfExpression.cs" />
+    <Compile Include="ParseResult.cs" />
     <Compile Include="Production.cs" />
     <Compile Include="BnfRuleset.cs" />
     <Compile Include="BnfToken.cs" />
