--- a/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
+++ b/Projektni2019_BNFParser/Projektni2019_BNFParser.csproj
@@ -108,6 +108,9 @@
     <Content Include="test\lines.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="test\lines2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
